<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/horizontal_margin">

    <EditText android:id="@+id/editUsername" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_gap" android:hint="@string/login_username_hint"/>
    
    <EditText android:id="@+id/editPwd" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_gap" android:hint="@string/login_pwd_hint"  android:inputType="textPassword"/>
    
    <Button android:id="@+id/btnLogin" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_gap" android:text="@string/login_btn"/>
    
    <TextView android:id="@+id/txtError" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textColor="@color/red" android:drawableLeft="@drawable/ic_msg_error" android:drawablePadding="4dip"
        android:visibility="gone" android:layout_marginBottom="@dimen/vertical_gap"/>
    
    <TextView android:id="@+id/txtAbout" android:layout_width="match_parent" android:layout_height="0dip"
        android:text="@string/login_about"/>
   
</LinearLayout>
